fix: fixes wrong margin on mobile navigation

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -188,6 +188,7 @@ a {
 
     padding-left: 0;
     list-style: none;
+    margin-top: 0;
 }
 
 .main-nav__list > li {
